@@ -1,0 +1,33 @@
+		'sys_language_uid' => Array (
+			'exclude' => 1,
+			'label' => 'LLL:EXT:lang/locallang_general.php:LGL.language',
+			'config' => Array (
+				'type' => 'select',
+				'foreign_table' => 'sys_language',
+				'foreign_table_where' => 'ORDER BY sys_language.title',
+				'items' => Array(
+					Array('LLL:EXT:lang/locallang_general.php:LGL.allLanguages',-1),
+					Array('LLL:EXT:lang/locallang_general.php:LGL.default_value',0)
+				),
+			),
+		),
+
+		'l18n_parent' => Array (
+			'displayCond' => 'FIELD:sys_language_uid:>:0',
+			'exclude' => 1,
+			'label' => 'LLL:EXT:lang/locallang_general.php:LGL.l18n_parent',
+			'config' => Array (
+				'type' => 'select',
+				'items' => Array (
+					Array('', 0),
+				),
+				'foreign_table' => {$table.full_alias},
+				'foreign_table_where' => 'AND {$table.full_alias}.pid=###CURRENT_PID### AND {$table.full_alias}.sys_language_uid IN (-1,0)',
+			),
+		),
+
+		'l18n_diffsource' => Array (
+			'config'=>array(
+				'type'=>'passthrough'
+			),
+		),
